# ByteTrain_Feishu

./: .bazelignore  .bazelrc  .bazelrc.ci  .bazelrc.local.example  .gitattributes  .gitignore  BUILD.bazel  Git协作说明.md  MODULE.bazel  README.md  local.properties  settings.gradle.kts  任务说明.md  任务说明解读.md  组内统一开发文档.md  细节说明.md
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: remote-cache.yml
app/: BUILD.bazel  README.md  build.gradle.kts  run_app.cmd.template
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/bytetrain/feishuclone/: AppRepositoryProvider.kt  MainActivity.kt
app/src/main/res/drawable/: ic_mail_24.xml  ic_messages_24.xml
app/src/test/kotlin/com/bytetrain/feishuclone/features/mail/data/: SdkMailRepositoryTest.kt
app/src/test/kotlin/com/bytetrain/feishuclone/features/message/data/: SdkMessageRepositoryTest.kt
docs/: README.md
docs/ai-context/: build-commands.md  common-build-errors.md  final-ai-evidence.md  final-bazel-delivery-evidence.md  final-retrospective.md  ide-bazel-workflow.md  mapper-field-tests.md  module-boundaries.md  openspec-archive-audit.md  p0-evidence-audit.md  project-structure.md  repository-paging-tests.md  scroll-performance-evidence.md  sdk-adapter-evidence.md  ui-main-flow-doc-001.md  ui-main-flow-release-evidence.md
docs/ai-context/build-system/: build-commands.md  common-build-errors.md  ide-bazel-workflow.md
docs/ai-context/sdk/: rust-sdk-async-protobuf-contract.md  rust-sdk-protobuf-design.md  sdk-adapter-evidence.md
docs/ai-context/skills/: bazel-build-debugger.md  bytetrain-android-development.md
docs/ai-context/tests/: mapper-field-tests.md  repository-paging-tests.md
docs/ai-context/ui/: scroll-performance-evidence.md  shared-list-detail-ui-evidence.md  ui-async-loading-strategy.md  ui-main-flow-doc-001.md  ui-main-flow-release-evidence.md  ui-state-matrix.md
docs/evidence/: final-ai-evidence.md  final-bazel-delivery-evidence.md  final-retrospective.md  full-bazel-workspace-evidence.md  openspec-archive-audit.md  p0-evidence-audit.md  vscode-android-debug-workflow.md
docs/project/: git-workflow.md  module-boundaries.md  project-structure.md  team-guide.md
docs/project/assignment/: task-analysis.md
docs/superpowers/specs/: 2026-06-07-bytetrain-feishu-landing-page-design.md
features/mail/: BUILD.bazel  README.md
features/mail/data/: MockMailRepository.kt  NativeProtobufMailSdkClient.kt  RuntimeMailSdkClient.kt  SdkMailRepository.kt
features/mail/domain/: MailItem.kt  MailRepository.kt
features/mail/mapper/: MailUiMapper.kt
features/mail/ui/: MailDetailScreen.kt  MailListScreen.kt
features/message/: BUILD.bazel  README.md
features/message/data/: MockMessageRepository.kt  NativeProtobufMessageSdkClient.kt  RuntimeMessageSdkClient.kt  SdkMessageRepository.kt
features/message/domain/: MessageItem.kt  MessageRepository.kt
features/message/mapper/: MessageUiMapper.kt
features/message/ui/: MessageDetailScreen.kt  MessageListScreen.kt
gradle/wrapper/: gradle-wrapper.properties
landing-page/: index.html
openspec/: project.md  prompt.md
openspec/changes/add-bazel-run-support/: design.md  proposal.md  tasks.md
openspec/changes/add-sdk-contract/: design.md  proposal.md  tasks.md
openspec/changes/add-ui-main-flow/: design.md  proposal.md  tasks.md
openspec/changes/complete-ide-run-debug-indexing/: design.md  proposal.md  tasks.md
openspec/changes/complete-rust-sdk-async-protobuf/: design.md  proposal.md  tasks.md
openspec/changes/fix-load-more-scroll-jump/: design.md  proposal.md
openspec/changes/improve-ai-context/: design.md  proposal.md  tasks.md
openspec/changes/init-project-architecture/: proposal.md  tasks.md
openspec/changes/plan-project-task-tracking/: design.md  proposal.md  tasks.md
openspec/changes/polish-ui-navigation-names/: proposal.md  tasks.md
openspec/changes/wire-bazel-build/: design.md  proposal.md  tasks.md
openspec/specs/ai-context/: spec.md
openspec/specs/ai-evidence-archive/: spec.md
openspec/specs/ide-build-plugin/: spec.md
openspec/specs/mobile-ui-main-flow/: spec.md
openspec/specs/native-rust-protobuf-ui-bridge/: spec.md
openspec/specs/project-architecture/: spec.md
openspec/specs/project-task-tracking/: spec.md
openspec/specs/sdk-contract/: spec.md
openspec/specs/sdk-runtime-integration/: spec.md
proto/: BUILD.bazel  mail.proto  message.proto  paging.proto
scripts/: check-doc-001.ps1  check-ide-002.ps1  check-ide-003.ps1  check-ide-004.ps1  check-mail-002.ps1  check-mail-003.ps1  check-mail-004.ps1  check-mail-005.ps1  check-mail-006.ps1  check-msg-003.ps1  check-msg-004.ps1  check-msg-005.ps1  check-msg-006.ps1  check-rel-001.ps1  check-sdk-006.ps1  check-test-001.ps1  check-test-002.ps1  check-test-003.ps1  check-test-004.ps1  check-ui-001.ps1  check-ui-002.ps1  check-ui-003.ps1  check-ui-005.ps1  check-ui-008.ps1  check-ui-011.ps1  ide-build.ps1  setup-git-hooks.ps1  setup-git-hooks.sh  verify-final-bazel-delivery.ps1
scripts/checks/docs/: check-doc-001.ps1  check-text-encoding.ps1
scripts/checks/ide/: check-ide-002.ps1  check-ide-003.ps1  check-ide-004.ps1
scripts/checks/mail/: check-mail-002.ps1  check-mail-003.ps1  check-mail-004.ps1  check-mail-005.ps1  check-mail-006.ps1
scripts/checks/message/: check-msg-003.ps1  check-msg-004.ps1  check-msg-005.ps1  check-msg-006.ps1
scripts/checks/release/: check-rel-001.ps1
scripts/commands/: ide-build.ps1  verify-final-bazel-delivery.ps1  verify-full-bazel-workspace.ps1
scripts/git-hooks/: check_commit_msg.py  check_pre_commit.py  check_pre_push.py
sdk/rust/: BUILD.bazel  Cargo.toml  README.md
sdk/rust/src/: async_api.rs  bridge.rs  error.rs  lib.rs  mock_data.rs  models.rs  paging.rs  protobuf.rs  tests.rs
shared/: BUILD.bazel  README.md
shared/list/: BUILD.bazel  PagingModels.kt
shared/navigation/: AppRoutes.kt  BUILD.bazel
shared/sdk/: BUILD.bazel  FeedProtobuf.kt  NativeRustFeedBridge.kt
shared/ui/: BUILD.bazel  SharedListDetailUi.kt  UnifiedUiModels.kt
tools/vscode-bazel-helper/: README.md  package-lock.json  package.json
(+91 files in other folders)
