package(default_visibility = ["//visibility:public"])

# Kotlin and Android rules will be wired in later changes.
MAIL_DOMAIN_SRCS = [
    "domain/MailItem.kt",
    "domain/MailRepository.kt",
]

MAIL_DATA_SRCS = [
    "data/MockMailRepository.kt",
    "data/SdkMailRepository.kt",
]

MAIL_MAPPER_SRCS = [
    "mapper/MailUiMapper.kt",
]

MAIL_UI_SRCS = [
    "ui/MailDetailScreen.kt",
    "ui/MailListScreen.kt",
]
