package(default_visibility = ["//visibility:public"])

# Kotlin and Android rules will be wired in later changes.
MESSAGE_DOMAIN_SRCS = [
    "domain/MessageItem.kt",
    "domain/MessageRepository.kt",
]

MESSAGE_DATA_SRCS = [
    "data/MockMessageRepository.kt",
]

MESSAGE_MAPPER_SRCS = [
    "mapper/MessageUiMapper.kt",
]

MESSAGE_UI_SRCS = [
    "ui/MessageDetailScreen.kt",
    "ui/MessageListScreen.kt",
]
