package(default_visibility = ["//visibility:public"])

load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

MESSAGE_DOMAIN_SRCS = [
    "domain/MessageItem.kt",
    "domain/MessageRepository.kt",
]

MESSAGE_DATA_SRCS = [
    "data/MockMessageRepository.kt",
    "data/NativeProtobufMessageSdkClient.kt",
    "data/RuntimeMessageSdkClient.kt",
    "data/SdkMessageRepository.kt",
]

MESSAGE_MAPPER_SRCS = [
    "mapper/MessageUiMapper.kt",
]

MESSAGE_UI_SRCS = [
    "ui/MessageDetailScreen.kt",
    "ui/MessageListScreen.kt",
]

kt_jvm_library(
    name = "domain",
    srcs = MESSAGE_DOMAIN_SRCS,
)

kt_jvm_library(
    name = "data",
    srcs = MESSAGE_DATA_SRCS,
    deps = [
        ":domain",
        "//shared/sdk:sdk_bridge",
    ],
)

kt_jvm_library(
    name = "mapper",
    srcs = MESSAGE_MAPPER_SRCS,
    deps = [
        ":domain",
        "//shared/ui:ui_models",
    ],
)

kt_android_library(
    name = "ui",
    srcs = MESSAGE_UI_SRCS,
    custom_package = "com.bytetrain.feishuclone.features.message",
    deps = [
        "//shared/list:list",
        "//shared/ui:ui_android",
        "//shared/ui:ui_models",
    ],
)

kt_jvm_library(
    name = "message",
    exports = [
        ":data",
        ":domain",
        ":mapper",
    ],
)
