package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "bytetrain_feed_sdk",
    srcs = ["src/lib.rs"],
    crate_name = "bytetrain_feed_sdk",
    edition = "2021",
)

rust_test(
    name = "bytetrain_feed_sdk_test",
    crate = ":bytetrain_feed_sdk",
)

