package(default_visibility = ["//visibility:public"])

load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

UI_MODEL_SRCS = [
    "UnifiedUiModels.kt",
]

UI_ANDROID_SRCS = [
    "SharedListDetailUi.kt",
]

kt_jvm_library(
    name = "ui_models",
    srcs = UI_MODEL_SRCS,
)

kt_android_library(
    name = "ui_android",
    srcs = UI_ANDROID_SRCS,
    custom_package = "com.bytetrain.feishuclone.shared.ui",
    deps = [
        ":ui_models",
        "//shared/list:list",
    ],
)
